tests/baselines/reference/nonPrimitiveIndexingWithForInSupressError.errors.txt
error TS5101: Option 'suppressImplicitAnyIndexErrors' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
nonPrimitiveIndexingWithForInSupressError.ts(3,17): error TS2454: Variable 'a' is used before being assigned.


!!! error TS5101: Option 'suppressImplicitAnyIndexErrors' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== nonPrimitiveIndexingWithForInSupressError.ts (1 errors) ====
    var a: object;
    
    for (var key in a) {
                    ~
!!! error TS2454: Variable 'a' is used before being assigned.
        var value = a[key];
    }
    